AP-19188: add additional space relative tests
AP-19188 (Add support for space-relative knime:// URLs)